Attemping to fix clear button issue on iphone

--- a/src/app.css
+++ b/src/app.css
@@ -160,4 +160,9 @@ ul {
 .rbt-close {
   background-color: #ffffff;
   border-style: none;
+  padding: 0;
+}
+
+.rbt-aux {
+  margin-right: 0.5rem;
 }
